--- a/Picro/Client/wwwroot/index.html
+++ b/Picro/Client/wwwroot/index.html
@@ -24,6 +24,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/compatibilityScripts.js"></script>
+    <script src="js/pushNotifications.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 </html>
